--- a/Group_Project.Rmd
+++ b/Group_Project.Rmd
@@ -1,8 +1,5 @@
 ---
-title: "Group_Project"
-author: "Pacers Worldwide - Ana, Jeffrey, Sneha, Wiroon"
-date: "11/24/2019"
-output: html_document
+Wine- Group Project
 ---
 
 ```{r}
