--- a/Group_Project.Rmd
+++ b/Group_Project.Rmd
@@ -17,37 +17,40 @@ white_data = read_csv('winequality_white.csv')
 group_data = read_csv('winequality_redandwhite.csv')
 ```
 
-##Introduction
+#Introduction
 
-###Brief description about the topic and the project.
+##Brief description about the topic and the project.
 
-#####How does your project help those who are interested in this topic?
+##How does your project help those who are interested in this topic?
 
   We are working with a dataset of more than 6000 different wines, including both red and white wines. For those interested in wine and particularly wine consumption, our project will help wine aficionados make informed decisions when choosing wine and help understand factors that help explain qualitative wine levels. By converting the numerical qualitative field to categorical we can than make distinctions between higher and lower quality wines as well as see variances between red and white based on quality.
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####Why data analysis is needed for this? 
+##Why data analysis is needed for this? 
 
   Data analysis is needed for this for many reasons. There are many different kinds of wine and even for people knowledgeable in this topic they can get overwhelmed when going into a store and picking a wine for a particular occasion. With data analysis we can compare similarities and differences and categorize wine. With so many options out there getting precise calculations provides individuals with the information needed to make the best decisions for their wine purchases. For example if an individual has had a bad day and just wants to drink their sorrows away, a lower quality wine of lower price may do the job for them while when trying to impress a spouse who loves wine and on a special occasion may call for a higher quality wine. The information provided from this analysis will hopefully provide some additional insight to the best decisions for wine selection.
 
-#####______________________________________________________ 
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####How do you expect your analysis to improve decision making in this area?
+
+##How do you expect your analysis to improve decision making in this area?
 
   The analysis and predictions could help wine aficionados make more informed wine purchases that is more tailored to their preferences. For example, one may prefer red wine, but they would also want it to have a low sugar content. This analysis could help individuals choose a red wine with lower sugar content. Similarly, the analysis could also help restaurant owners distinguish the different types of red and white wine and mark their prices accordingly. For example, the analysis could find correlations between white wines with high PH levels tend to have higher quality, therefore, the price for that wine should be higher.
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-###Describe your data; 
 
-#####What is the source?
+#Describe your data; 
+
+##What is the source?
 
   This dataset was found in data.world (https://data.world/food/wine-quality). The source provided the data for white and red wine in 2x seperate data sources. We had to concatenate the sources together and add a qualitative field to determine red and white wines from each set. The adjusted CSV file is included with this report where all analysis was performed.
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####What are your variables? If there are too many, focus on the ones that you will explore
+
+##What are your variables? If there are too many, focus on the ones that you will explore
 
   - Fixed acidity:  A measurement of the quantity of acid in a wine. It determines how a wine will taste, feel, and how well it will age. (“Understanding Wine Acidity.”)
   
@@ -73,15 +76,16 @@ group_data = read_csv('winequality_redandwhite.csv')
 
   - Quality - a integer based range that determines quality based on other factors (assuming most are included in this dataset but may have additional outliers)
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####Describe the data cleaning process if you needed
+
+##Describe the data cleaning process if you needed
 
   There was some small cleaning of the dataset. Two new columns were added: “Red_or_White” and categorical column for quality. The data for the red and white wine were on two seperate files, we merged those two files into one. To identify which attributes belonged to red wine and which attributes belonged to white wine, the “Red_or_White” column was added. The categorical quality column was added to better gauge the quality of the wine, the quality can now be classified as “low”, “medium”, or “high.”
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####______________________________________________________
 
-#####1. What is the distribution of wine in the data set? Red vs White & Quality?
+##1. What is the distribution of wine in the data set? Red vs White & Quality?
 ```{r}
 group_data
 hist(group_data$quality)
@@ -110,9 +114,10 @@ Based on the histogram and breakout of qualities (red vs white wine) we can dete
  
  - From here we will work to determine unique variance between high & low quality.
 
-#####______________________________________________________ 
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####2. What variables determine quality of wine?
+
+##2. What variables determine quality of wine?
 ```{r}
 lps=regsubsets(quality~., data = group_data_2)
 plot(lps, scale='adjr2')
@@ -125,9 +130,10 @@ Based on this the strongest variables to determine overall wine quality are:
  - Sulphates
  - Alcohol
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####3. Are there differences between white and red wine that are more informative where variables can determine white or red?
+
+##3. Are there differences between white and red wine that are more informative where variables can determine white or red?
 ```{r}
 group_data_2_White = group_data_2 %>% filter(Red_or_White == 'White')
 group_data_2_Red = group_data_2 %>% filter(Red_or_White == 'Red')
@@ -158,9 +164,10 @@ The quality of White wines can be defined with the following variables:
  - Sulphates
  - Alcohol
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####4. Based on question 2 & 3, volatile acidity and alcohol are the strongest variables that determine quality of wine. What is the relationship between volatile acidity and alcohol in wine?
+
+##4. Based on question 2 & 3, volatile acidity and alcohol are the strongest variables that determine quality of wine. What is the relationship between volatile acidity and alcohol in wine?
 
 ```{r}
 xyplot(`volatile acidity` ~ alcohol, group_data_2)
@@ -170,7 +177,8 @@ summary(my_model)
 ```
 Scatter plot and linear model summary show that there is no relationship between volatile acidity and alcohol. Based on the linear model, an unit increase in alcohol adjust volatile acidity by such a small margin, it does not show a relevant correlation between the two.
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
+
 
 #####5. After finding no significant relationship between volatile acidity and alcohol, can we find that there is a stronger relationship between alcohol & quality?
 
@@ -181,9 +189,10 @@ summary(my_model2)
 ```
 While there isn't a very strong relationship, we can say it is a stronger relationship and for every unit increase in alcohol, we can expect an increase in the quality by .32 per unit of alcohol.
 
-#####______________________________________________________
+______________________________________________________________________________________________________________________________________________________________________________
 
-#####Summary of findings & prediction method:
+
+#Summary of findings & prediction method:
  - Based on findings, we see that using multiple variables is the only way to determine quality and distinction between red and white wines. While trying to find strong relationships between specific variables, there was no strong unique identifying variable. For our predicitve model it will be important to use the variables.
  
  - Our prediction method is based on finding the following variables will best predict quality of wine:
@@ -196,9 +205,10 @@ While there isn't a very strong relationship, we can say it is a stronger relati
  - Our prediction method is there will be distinguished differences between high vs low quality wines of the same type (red or white).
  
 
+______________________________________________________________________________________________________________________________________________________________________________
  
  
-###Works Cited
+#Works Cited
 
 P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis.
 Modeling wine preferences by data mining from physicochemical properties.
