--- a/Group_Project.Rmd
+++ b/Group_Project.Rmd
@@ -2,8 +2,12 @@
 title: "Group_Project"
 author: "Pacers Worldwide - Ana, Jeffrey, Sneha, Wiroon"
 date: "11/24/2019"
-output: html_document: keep_md: true
+output: rmarkdown::github_document
 ---
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(collapse=TRUE, comment="##", fig.retina=2, fig.path = "README_figs/README-")
+```
 
 ```{r}
 require(tidyverse)
